[project]
name = "zhaw-reinforcement-learning"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "cloudpickle==3.1.1",
    "comm==0.2.3",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "exceptiongroup==1.3.0",
    "executing==2.2.1",
    "farama-notifications==0.0.4",
    "fonttools==4.60.0",
    "gymnasium==1.1.1",
    "imageio==2.37.0",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "ipykernel==6.30.1",
    "ipython==8.18.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.7",
    "matplotlib==3.9.4",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "notebook>=7.4.7",
    "numpy==2.0.2",
    "packaging==25.0",
    "pandas==2.3.2",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygame==2.6.1",
    "pygments==2.19.2",
    "pyparsing==3.2.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "seaborn==0.13.2",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "wcwidth==0.2.13",
    "zipp==3.23.0",
]
